Issue #398 - making the byline not wrap

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2682,7 +2682,13 @@ header.tutorial hgroup + section
   margin-top: 0;
 }
 
-header.tutorial .byline,
+header.tutorial .byline
+{
+  float: left;
+  width: 100%;
+  overflow: hidden;
+}
+
 header.tutorial aside
 {
   float: left;
